<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scrim"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_card_edge_margin"
        app:cardBackgroundColor="@color/secondaryColor"
        android:elevation="@dimen/material_card_elevation_resting"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/recipe_details_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/material_card_title_block_large_padding_top"
            android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
            android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
            android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
            android:textSize="@dimen/material_card_supporting_text_text_size"
            tools:text="Ingredients list:\nItem1\nItem2"/>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipe_steps"
        android:layout_width="match_parent"
        tools:listitem="@layout/fragment_recipe_item"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_card_edge_margin"/>

</LinearLayout>